# pycsou-mock-plugin-1

./: README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/pycsou_mock_plugin_1/: __init__.py
src/pycsou_mock_plugin_1/operator/: __init__.py
src/pycsou_mock_plugin_1/opt/: __init__.py
src/pycsou_mock_plugin_1_tests/: test_math.py  test_operator.py  test_solver.py  test_stop.py
src/pycsou_mock_plugin_1_tests/test_operator/: test_func.py  test_linop.py
