[metadata]
name = pycsou-mock-plugin-1

description = A simple plugin to use the FooBar collection within Pycsou
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joanrue/pycsou-mock-plugin-1
author = Joan Rue Queralt
author_email = joan.rue.q@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: pycsou
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/joanrue/pycsou-mock-plugin-1/issues
    Documentation = https://github.com/joanrue/pycsou-mock-plugin-1#README.md
    Source Code = https://github.com/joanrue/pycsou-mock-plugin-1
    User Support = https://github.com/joanrue/pycsou-mock-plugin-1/issues

[options]
packages = find:
install_requires =
    numpy
    pycsou @ git+https://github.com/matthieumeo/pycsou@v2-dev
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

# Note the `_` underscore to overload a base Pycsou class.
[options.entry_points]
pycsou.math =
    eigh = pycsou_mock_plugin_1:eigh
pycsou.operator =
    Flip = pycsou_mock_plugin_1:Flip
    _NullFunc = pycsou_mock_plugin_1:NullFunc




[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml